# nextflow-k8s-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  conductor.json  main.py  openapi.json  pr_body.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_run.json  test_websocket.py  test_ws_full.py  test_ws_simple.py
.github/workflows/: ci.yml  release.yml
nextflow-api/: Dockerfile  README.md  requirements.txt
nextflow-api/app/: config.py
nextflow-api/app/api/: routes.py  websocket.py
nextflow-api/app/services/: log_streamer.py  pipeline_manager.py  state_store.py
nextflow-api/examples/simple-pipeline/: main.nf
nextflow-api/k8s-manifests/: configmap.yaml  deployment.yaml  rbac.yaml  service.yaml
nextflow_k8s_service/: .env.example  Dockerfile  README.md
nextflow_k8s_service/app/: config.py  main.py  models.py  progress_models.py
nextflow_k8s_service/app/api/: metrics.py  routes.py  websocket.py
nextflow_k8s_service/app/kubernetes/: client.py  jobs.py  monitor.py
nextflow_k8s_service/app/parsers/: __init__.py  demo_results.py  nextflow_log_parser.py
nextflow_k8s_service/app/services/: log_streamer.py  pipeline_manager.py  progress_calculator.py  state_store.py
nextflow_k8s_service/app/utils/: broadcaster.py
nextflow_k8s_service/examples/: test_workflows.yaml
nextflow_k8s_service/examples/simple-pipeline/: nextflow.config
nextflow_k8s_service/k8s-manifests/: configmap.yaml  deployment.yaml  rbac.yaml  service.yaml  workflow-configmap.yaml
nextflow_k8s_service/k8s-manifests/workflows/: demo-workflow.yaml
nextflow_k8s_service/workflows/: demo.nf  nextflow.config
scripts/: conductor-setup.sh  generate_openapi.py
tests/: conftest.py  test_broadcaster.py  test_config.py  test_demo_results.py  test_demo_routes.py  test_health_endpoints.py  test_kubernetes_client.py  test_kubernetes_jobs.py  test_kubernetes_monitor.py  test_log_streamer.py  test_metrics_api.py  test_models.py  test_nextflow_log_parser.py  test_pipeline_manager.py  test_progress_calculator.py  test_state_store.py  test_websocket.py
tests/contract/: test_k8s_manifests.py
tests/integration/: conftest.py  test_api_endpoints.py  test_job_lifecycle.py  test_websocket_streaming.py
tests/smoke/: test_deployment.py
tests/unit/: test_log_streamer.py  test_state_store.py
