[project]
name = "nextflow-k8s-service"
version = "1.7.1"
description = "FastAPI controller for single-instance Nextflow pipeline runs on Kubernetes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "kubernetes>=26.1.0",
    "redis>=5.0.0",
    "slowapi>=0.1.8",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["nextflow_k8s_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
build_command = ""
upload_to_repository = false
upload_to_release = true
commit_message = "chore(release): {version}"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.2",
]
release = [
    "python-semantic-release>=9.4",
]

[tool.ruff]
target-version = "py313"
line-length = 120
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
