[project]
name = "nextflow-k8s-service"
version = "1.11.0"
description = "FastAPI controller for single-instance Nextflow pipeline runs on Kubernetes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "kubernetes>=26.1.0",
    "redis>=5.0.0",
    "slowapi>=0.1.8",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["nextflow_k8s_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=nextflow_k8s_service",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "redis: Tests requiring Redis",
]

[tool.coverage.run]
source = ["nextflow_k8s_service"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
build_command = ""
upload_to_repository = false
upload_to_release = true
commit_message = "chore(release): {version}"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "freezegun>=1.4.0",
    "faker>=22.0.0",
    "ruff>=0.13.2",
    "bandit[toml]>=1.7.5",
    "safety>=3.0.0",
]
release = [
    "python-semantic-release>=9.4",
]

[tool.ruff]
target-version = "py313"
line-length = 120
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
